--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-Django
-dj-database-url
-psycopg2
-django-bootstrap3
-Pillow
+appdirs==1.4.0
+dj-database-url==0.4.2
+Django==1.10.5
+django-bootstrap3==8.1.0
+olefile==0.44
+packaging==16.8
+Pillow==4.0.0
+psycopg2==2.6.2
+pyparsing==2.1.10
+six==1.10.0
+whitenoise==3.2.3
