--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ dj-database-url==0.4.2
 psycopg2==2.6.2
 django-storages==1.5.2
 boto==2.45.0
+wagtail-blog==1.6.9
+django-comments-xtd==1.7.2
+django-contrib-comments==1.7.3
+sendgrid==3.6.3
+sendgrid-django==4.0.4
